--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <div class="dropdown-menu">
                                     <a href="wishlist.html" class="dropdown-item">Wishlist</a>
                                     <a href="login.html" class="dropdown-item">Login & Register</a>
-                                    <a href="contact.html" class="dropdown-item">Contact Us</a>
+                                    <a href="agoraempltda/contact.html" class="dropdown-item">Contact Us</a>
                                 </div>
                             </div>
                         </div>
@@ -575,7 +575,7 @@
                         <div class="footer-widget">
                             <h2>Informações</h2>
                             <ul>
-                                <li><a href="/contact.html">Sobre Nós</a></li>
+                                <li><a href="agoraempltda/contact.html">Sobre Nós</a></li>
                                 
                             </ul>
                         </div>
